Translated colors of parachute

--- a/src/main/resources/assets/galacticraftcore/lang/nl_NL.lang
+++ b/src/main/resources/assets/galacticraftcore/lang/nl_NL.lang
@@ -43,22 +43,22 @@ item.flag.red.name=Rode vlag
 item.flag.teal.name=Cyaanse vlag
 item.flag.yellow.name=Gele vlag
 item.flag.white.name=Vlag
-item.parachute_plain.name=Parachute ##NEEDS TRANSLATE##
-item.parachute_black.name=Black Parachute ##NEEDS TRANSLATE##
-item.parachute_blue.name=Light Blue Parachute ##NEEDS TRANSLATE##
-item.parachute_lime.name=Lime Parachute ##NEEDS TRANSLATE##
-item.parachute_brown.name=Brown Parachute ##NEEDS TRANSLATE##
-item.parachute_darkblue.name=Blue Parachute ##NEEDS TRANSLATE##
-item.parachute_darkgray.name=Gray Parachute ##NEEDS TRANSLATE##
-item.parachute_darkgreen.name=Green Parachute ##NEEDS TRANSLATE##
-item.parachute_gray.name=Light Gray Parachute ##NEEDS TRANSLATE##
-item.parachute_magenta.name=Magenta Parachute ##NEEDS TRANSLATE##
-item.parachute_orange.name=Orange Parachute ##NEEDS TRANSLATE##
-item.parachute_pink.name=Pink Parachute ##NEEDS TRANSLATE##
-item.parachute_purple.name=Purple Parachute ##NEEDS TRANSLATE##
-item.parachute_red.name=Red Parachute ##NEEDS TRANSLATE##
-item.parachute_teal.name=Cyan Parachute ##NEEDS TRANSLATE##
-item.parachute_yellow.name=Yellow Parachute ##NEEDS TRANSLATE##
+item.parachute_plain.name=Parachute
+item.parachute_black.name=Zwarte Parachute
+item.parachute_blue.name=Lichtblauwe Parachute
+item.parachute_lime.name=Lichtgroene Parachute
+item.parachute_brown.name=Bruine Parachute
+item.parachute_darkblue.name=Blauwe Parachute
+item.parachute_darkgray.name=Grijze Parachute
+item.parachute_darkgreen.name=Groene Parachute
+item.parachute_gray.name=Lichtgrijze Parachute
+item.parachute_magenta.name=Magenta Parachute
+item.parachute_orange.name=Oranje Parachute
+item.parachute_pink.name=Roze Parachute
+item.parachute_purple.name=Paarse Parachute
+item.parachute_red.name=Rode Parachute
+item.parachute_teal.name=Turqoise Parachute
+item.parachute_yellow.name=Gele Parachute
 item.steelPole.name=Steel Pole ##NEEDS TRANSLATE##
 item.parachute.plain.name=Parachute
 item.parachute.black.name=Zwarte parachute
