Updated some things

--- a/src/main/resources/assets/galacticraftcore/lang/nl_NL.lang
+++ b/src/main/resources/assets/galacticraftcore/lang/nl_NL.lang
@@ -25,7 +25,7 @@ item.rocketFins.name=Raket vleugels
 item.noseCone.name=Neuskegel
 item.sensorLens.name=Sensor lens
 item.oxygenGear.name=Zuurstof uitrusting
-item.flag.name=Flag ##NEEDS TRANSLATE##
+item.flag.name=Vlag
 item.flag.american.name=Amerikaanse vlag
 item.flag.black.name=Zwarte vlag
 item.flag.blue.name=Licht blauwe vlag
@@ -59,7 +59,7 @@ item.parachute_purple.name=Paarse Parachute
 item.parachute_red.name=Rode Parachute
 item.parachute_teal.name=Turqoise Parachute
 item.parachute_yellow.name=Gele Parachute
-item.steelPole.name=Steel Pole ##NEEDS TRANSLATE##
+item.steelPole.name=Stalen Paal
 item.parachute.plain.name=Parachute
 item.parachute.black.name=Zwarte parachute
 item.parachute.blue.name=Licht blauwe parachute
@@ -92,12 +92,12 @@ item.buggymat.wheel.name=Buggy Wheel
 item.buggymat.seat.name=Buggy Seat
 item.buggymat.storage.name=Buggy Storage Box
 item.basicItem.solar_module_0.name=Single Solar Module ##NEEDS TRANSLATE##
-item.basicItem.solar_module_1.name=Full Solar Panel ##NEEDS TRANSLATE##
-item.basicItem.ingotCopper.name=Copper Ingot ##NEEDS TRANSLATE##
-item.basicItem.ingotTin.name=Tin Ingot ##NEEDS TRANSLATE##
-item.basicItem.ingotAluminum.name=Aluminum Ingot ##NEEDS TRANSLATE##
-item.basicItem.ingotSteel.name=Steel Ingot ##NEEDS TRANSLATE##
-item.basicItem.ingotBronze.name=Bronze Ingot ##NEEDS TRANSLATE##
+item.basicItem.solar_module_1.name=Volledig Zonnepaneel
+item.basicItem.ingotCopper.name=Koperstaaf
+item.basicItem.ingotTin.name=Tinstaaf
+item.basicItem.ingotAluminum.name=Aluminiumstaaf
+item.basicItem.ingotSteel.name=Staalstaaf
+item.basicItem.ingotBronze.name=Bronsstaaf
 item.basicItem.compressedCopper.name=Compressed Copper ##NEEDS TRANSLATE##
 item.basicItem.compressedTin.name=Compressed Tin ##NEEDS TRANSLATE##
 item.basicItem.compressedAluminum.name=Compressed Aluminum ##NEEDS TRANSLATE##
@@ -109,7 +109,7 @@ item.basicItem.waferBasic.name=Basic Wafer ##NEEDS TRANSLATE##
 item.basicItem.waferAdvanced.name=Advanced Wafer ##NEEDS TRANSLATE##
 item.basicItem.rawSilicon.name=Raw Silicon ##NEEDS TRANSLATE##
 item.tier1.desc=Tier 1 ##NEEDS TRANSLATE##
-item.battery.name=Battery ##NEEDS TRANSLATE##
+item.battery.name=Batterij
 item.infiniteBattery.name=Infinite Battery ##NEEDS TRANSLATE##
 item.infiniteOxygen.name=Infinite Oxygen Supply ##NEEDS TRANSLATE##
 item.meteorChunk.name=Throwable Meteor Chunk ##NEEDS TRANSLATE##
